--- a/index.html
+++ b/index.html
@@ -16,22 +16,27 @@
     />
   </head>
   <body>
-    <!--
-      Start with desktop layout
-      mobile, then tablet layout
-      
-      Big to small, top to bottom
-
-      Collect assets (pictures and fonts) first
-    -->
     <main>
-      <section class="about-me">
-        <div class="about-me-wrapper">
+      <header class="about-me">
+        <div class="skewed-bg-top"></div>
+        <div class="skewed-bg"></div>
+        <div class="portrait-wrapper">
           <h1>Kat Coder</h1>
-          <img
-            src="./photos/pexels-wojciech-kumpicki-1084687-2071873-desktop.jpg"
-            alt="Picture of an orange and white cat peeking around the trunk of a tree."
-          />
+          <picture>
+            <source
+              srcset="
+                ./photos/pexels-wojciech-kumpicki-1084687-2071873-mobile.jpg
+              "
+              media="(max-width: 600px)"
+            />
+            <img
+              src="./photos/pexels-wojciech-kumpicki-1084687-2071873-portrait.jpg"
+              alt="(Photo by Wojciech Kumpicki on pexels.com.) A picture of an orange and white cat staring intently, standing next to a door handle."
+            />
+          </picture>
+        </div>
+
+        <div class="about-me-wrapper">
           <h1>About me</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -39,183 +44,214 @@
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat. Duis aute irure dolor in
             reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            pariatur.
           </p>
+          <div class="header-icon-wrapper">
+            <i class="devicon-github-original colored"></i>
 
+            <i class="devicon-linkedin-plain colored"></i>
+
+            <i class="devicon-twitter-original colored"></i>
+          </div>
+        </div>
+      </header>
+      <section class="my-work">
+        <h1>My work</h1>
+        <div class="portfolio-wrapper">
+          <div class="portfolio-project">
+            <div class="img-placeholder">screenshot of project</div>
+            <h2>Project name</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <div class="icon-wrapper">
+              <i class="devicon-github-original colored"></i>
+              <svg
+                width="22px"
+                height="auto"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <title>open-in-new</title>
+                <path
+                  d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                />
+              </svg>
+            </div>
+          </div>
+
+          <div class="portfolio-project">
+            <div class="img-placeholder">screenshot of project</div>
+            <h2>Project name</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <div class="icon-wrapper">
+              <i class="devicon-github-original colored"></i>
+              <svg
+                width="22px"
+                height="auto"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <title>open-in-new</title>
+                <path
+                  d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                />
+              </svg>
+            </div>
+          </div>
+
+          <div class="portfolio-project">
+            <div class="img-placeholder">screenshot of project</div>
+            <h2>Project name</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <div class="icon-wrapper">
+              <i class="devicon-github-original colored"></i>
+              <svg
+                width="22px"
+                height="auto"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <title>open-in-new</title>
+                <path
+                  d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                />
+              </svg>
+            </div>
+          </div>
+
+          <div class="portfolio-project">
+            <div class="img-placeholder">screenshot of project</div>
+            <h2>Project name</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <div class="icon-wrapper">
+              <i class="devicon-github-original colored"></i>
+              <svg
+                width="22px"
+                height="auto"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <title>open-in-new</title>
+                <path
+                  d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                />
+              </svg>
+            </div>
+          </div>
+
+          <div class="portfolio-project">
+            <div class="img-placeholder">screenshot of project</div>
+            <h2>Project name</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <div class="icon-wrapper">
+              <i class="devicon-github-original colored"></i>
+              <svg
+                width="22px"
+                height="auto"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <title>open-in-new</title>
+                <path
+                  d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                />
+              </svg>
+            </div>
+          </div>
+
+          <div class="portfolio-project">
+            <div class="img-placeholder">screenshot of project</div>
+            <h2>Project name</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <div class="icon-wrapper">
+              <i class="devicon-github-original colored"></i>
+              <svg
+                width="22px"
+                height="auto"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <title>open-in-new</title>
+                <path
+                  d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-contents-wrapper">
+        <h1>Contact me</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+        <span>1234 Random Road Random Town, California 12345 </span>
+        <span class="phone">
+          <svg
+            width="22px"
+            height="auto"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+          >
+            <title>phone</title>
+            <path
+              d="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z"
+            />
+          </svg>
+          555-555-5555
+        </span>
+        <span class="email">
+          <svg
+            width="22px"
+            height="height"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+          >
+            <title>email-outline</title>
+            <path
+              d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
+            />
+          </svg>
+          katcoder.is.not.real@mailprovider.com
+        </span>
+        <div class="icon-wrapper">
           <i class="devicon-github-original colored"></i>
 
           <i class="devicon-linkedin-plain colored"></i>
 
           <i class="devicon-twitter-original colored"></i>
         </div>
-      </section>
-      <section class="my-work">
-        <h1>My work</h1>
-        <div class="portfolio-wrapper">
-          <div>
-            <div class="img-placeholder">screenshot of project</div>
-            <h2>Project name</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <i class="devicon-github-original colored"></i>
-            <svg
-              width="22px"
-              height="auto"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-            >
-              <title>open-in-new</title>
-              <path
-                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
-              />
-            </svg>
-          </div>
-
-          <div>
-            <div class="img-placeholder">screenshot of project</div>
-            <h2>Project name</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <i class="devicon-github-original colored"></i>
-            <svg
-              width="22px"
-              height="auto"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-            >
-              <title>open-in-new</title>
-              <path
-                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
-              />
-            </svg>
-          </div>
-
-          <div>
-            <div class="img-placeholder">screenshot of project</div>
-            <h2>Project name</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <i class="devicon-github-original colored"></i>
-            <svg
-              width="22px"
-              height="auto"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-            >
-              <title>open-in-new</title>
-              <path
-                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
-              />
-            </svg>
-          </div>
-
-          <div>
-            <div class="img-placeholder">screenshot of project</div>
-            <h2>Project name</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <i class="devicon-github-original colored"></i>
-            <svg
-              width="22px"
-              height="auto"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-            >
-              <title>open-in-new</title>
-              <path
-                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
-              />
-            </svg>
-          </div>
-
-          <div>
-            <div class="img-placeholder">screenshot of project</div>
-            <h2>Project name</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <i class="devicon-github-original colored"></i>
-            <svg
-              width="22px"
-              height="auto"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-            >
-              <title>open-in-new</title>
-              <path
-                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
-              />
-            </svg>
-          </div>
-
-          <div>
-            <div class="img-placeholder">screenshot of project</div>
-            <h2>Project name</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <i class="devicon-github-original colored"></i>
-            <svg
-              width="22px"
-              height="auto"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-            >
-              <title>open-in-new</title>
-              <path
-                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
-              />
-            </svg>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <h1>Contact me</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.
-      </p>
-      <span>1234 Random Road Random Town, California 12345 </span>
-      <span class="phone">
-        <svg
-          width="22px"
-          height="auto"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-        >
-          <title>phone</title>
-          <path
-            d="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z"
-          />
-        </svg>
-        555-555-5555
-      </span>
-      <span class="email">
-        <svg
-          width="22px"
-          height="height"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-        >
-          <title>email-outline</title>
-          <path
-            d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
-          />
-        </svg>
-        katcoder.is.not.real@mailprovider.com
-      </span>
+      </div>
+      <picture class="footer-img">
+        <source
+          srcset="./photos/pexels-pixabay-257532-cropped.jpg"
+          media="(max-width: 1200px)"
+        />
+        <img
+          src="./photos/pexels-pixabay-257532.jpg"
+          alt="(Photo by Pixabay on pexels.com.) Picture of an orange and white cat peeking around the trunk of a tree."
+        />
+      </picture>
     </footer>
   </body>
 </html>
