Clean up comments in styles.css, hide     decorative header items from accessibility.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     <main>
       <header class="about-me">
-        <div class="skewed-bg-top"></div>
-        <div class="skewed-bg"></div>
+        <div class="skewed-bg-top" aria-hidden="true"></div>
+        <div class="skewed-bg" aria-hidden="true"></div>
         <div class="portrait-wrapper">
           <h1>Kat Coder</h1>
           <picture>
